fix: correct spacing as a result of #11

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -73,12 +73,11 @@ div.nav {
     align-items: center;
     justify-content: center;
     margin: 0 2em;
-    flex-direction: column-reverse;
+    // flex-direction: column-reverse;
     @media (min-width: 900px) {
         flex-direction: row;
         > div, > img {
             margin: 1em 2em;
-            @media (min-width: 900px) { margin: 1em auto; }
             max-width: 600pt;
         }
         > img { height: 40vh; }
